--- a/Views/Lab3/Index.cshtml
+++ b/Views/Lab3/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<link href="/css/lab3.css" rel="stylesheet" />
+﻿@model string[]
+
+<link href="/css/lab3.css" rel="stylesheet"/>
 
 <section class="chat">
     <div class="form-wrapper">
@@ -8,17 +10,18 @@
             <button id="connectButton" type="button" onclick="connect()">Connect</button>
         </div>
         <div class="wrapper login-wrapper">
-            <label for="name">Name</label>
-            <input id="name" type="text" placeholder="Anonymous">
-            <div class="btn-wrapper">
-                <button type="button" onclick="getMyName()">Get</button>
-                <button type="button" onclick="setMyName()">Set</button>
-            </div>
+            <label for="name">Role:</label>
+            <select class="form-control" id="role" onchange="setMyName()">
+                @foreach (string item in @Model)
+                {
+                    <option selected=@Model[0] value=@item>@item</option>
+                }
+            </select>
         </div>
-        <div class="wrapper message-wrapper">
-            <label for="wrapper message">Text</label>
-            <textarea id="message"></textarea>
-            <button type="button" onclick="sendMessage()">Send</button>
+        <div class="wrapper">
+            <label for="wrapper message">To do:</label>
+            <button type="button" onclick="sendMessage('Eat')">Eat</button>
+            <button type="button" onclick="sendMessage('Move')">Move</button>
         </div>
     </div>
     <div class="messages-wrapper">
@@ -28,4 +31,4 @@
 
 </section>
 <script type="text/javascript" src="~/js/signalr.min.js"></script>
-<script type="text/javascript" src="~/js/lab3.js"></script>
+<script type="text/javascript" src="~/js/lab3.js" asp-append-version="true"></script>
