Refactored third lab

--- a/Views/Lab3/Index.cshtml
+++ b/Views/Lab3/Index.cshtml
@@ -20,8 +20,8 @@
         </div>
         <div class="wrapper">
             <label for="wrapper message">To do:</label>
-            <button type="button" onclick="sendMessage('Eat')">Eat</button>
-            <button type="button" onclick="sendMessage('Move')">Move</button>
+            <button type="button" class="sendMessages" onclick="sendMessage('Eat')">Eat</button>
+            <button type="button" class="sendMessages" onclick="sendMessage('Move')">Move</button>
         </div>
     </div>
     <div class="messages-wrapper">
